# parso

./: README.md  bun.lockb  justfile  main.py  package.json  pyproject.toml
.github/workflows/: test.yml
parso/: combinators.py  common-regex.py  parser-json.py  primitives.py  types.py  utils.py
src/: combinators.ts  common-regex.ts  functor.ts  index.ts  input.ts  monad.ts  parser.ts  primitives.ts  types.ts  utils.ts
src/__tests__/: json.test.ts
src/parsers/: json.ts
tests/: test_combinators.py  test_common_regex.py  test_parser_json.py  test_primitives.py  test_types.py  test_utils.py
