[project]
name = "parso"
version = "0.1.0"
description = "an parser combinator library in python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build>=1.2.2.post1",
    "isort>=6.0.1",
    "pipe>=2.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "toolz>=1.0.0",
    "twine>=6.1.0",
]

[tool.pytest.ini_options]
addopts = "--cov=parso --cov-report=term-missing -ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["parso"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
fix = true
exclude = ["tests/snapshots"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]                   # line too long if using Black

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "ruff",
    "black",
    "isort",
    "pre-commit",
    "build",
    "twine",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
